--- a/sass/scaffolding.scss
+++ b/sass/scaffolding.scss
@@ -1,11 +1,12 @@
 body {
-  font-size: 18px;
-  line-height: 27px;
-  font-family: PT Sans Narrow, sans-serif, Arial, sans-serif;
-  color: #f7f4f1;
+  font-size: 15px;
+  line-height: 30px;
+  font-family: Open Sans, sans-serif, Arial, sans-serif;
+  color: #464646;
   font-style: normal;
+  background-color: #ffffff;
 
-  background-color: $bg-darkgrey;
+  margin: 0;
 }
 
 img {
