--- a/sass/mixins.scss
+++ b/sass/mixins.scss
@@ -7,6 +7,11 @@
   }
 }
 
+@mixin container-fixed {
+  width: 1160px;
+  margin: 0 auto;
+}
+
 @mixin container {
   width: 320px;
   margin: 0 auto;
