--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,8 @@
-@import variables.scss;
-@import mixins.scss;
-@import scaffolding.scss;
+@import "variables.scss";
+@import "mixins.scss";
+@import "scaffolding.scss";
+@import "fonts.scss";
+
+@import "blocks/main-header.scss";
+@import "blocks/user-items.scss";
+@import "blocks/main-nav.scss";
