--- a/sass/fonts.scss
+++ b/sass/fonts.scss
@@ -14,3 +14,11 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: "Gilroy Light";
+  src: url("../fonts/web/gilroylight.woff") format("woff"),
+        url("../fonts/web/gilroylight.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
+
