--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,3 +6,6 @@
 @import "blocks/main-header.scss";
 @import "blocks/user-items.scss";
 @import "blocks/main-nav.scss";
+@import "blocks/slider.scss";
+@import "blocks/btn.scss";
+@import "blocks/popular.scss";
