--- a/sass/blocks/main-nav.scss
+++ b/sass/blocks/main-nav.scss
@@ -37,6 +37,8 @@
 
     background-color: transparent;
 
+    cursor: pointer;
+
     font-family: Gilroy Extra Bold, Arial, sans-serif;
     font-size: 18px;
     line-height: 24px;
