--- a/sass/blocks/main-header.scss
+++ b/sass/blocks/main-header.scss
@@ -1,12 +1,11 @@
 .main-header {
   @include container-fixed();
   background-color: #f7e296;
+  position: relative;
 
   box-sizing: border-box;
   margin-top: 40px;
   padding-top: 40px;
-  padding-left: 60px;
-  padding-right: 60px;
   min-height: 300px;
 }
 
@@ -15,6 +14,7 @@
   width: 164px;
   height: 36px;
   margin-top: -57px;
+  margin-left: 60px;
 }
 
 .main-header .logo:hover {
