--- a/sass/blocks/main-nav.scss
+++ b/sass/blocks/main-nav.scss
@@ -11,16 +11,36 @@
     padding: 0;
     margin: 0;
     list-style: none;
+    position: absolute;
+    bottom: 0;
+
+    padding-left: 60px;
+    padding-right: 60px;
+    padding-bottom: 42px;
+
+    z-index: 5;
+
     font-family: Open Sans Light, Arial, sans-serif;
     font-size: 15px;
     line-height: 36px;
 
     display: flex;
-    justify-content: space-between;
-    width: 550px;
+    width: 640px;
+
 
     &--closed {
       display: none;
+    }
+
+    &::before {
+      content: "";
+      z-index: -1;
+      bottom: 0;
+      left: 0;
+      width: 1160px;
+      height: 100%;
+      position: absolute;
+      background-color: #f7e296;
     }
   }
 
@@ -30,6 +50,7 @@
 
     margin-right: 293px;
     margin-bottom: 17px;
+    margin-left: 60px;
 
     position: relative;
 
@@ -90,12 +111,18 @@
       opacity: 0.3;
     }
   }
+
+  .column {
+    margin-right: 45px;
+  }
 }
 
 .main-nav__list {
   margin: 0;
   padding: 0;
   list-style: none;
+
+  padding-right: 60px;
 
   display: flex;
   justify-content: space-between;
