--- a/sass/blocks/user-items.scss
+++ b/sass/blocks/user-items.scss
@@ -8,9 +8,12 @@
 .user-items__list {
   margin: 0;
   padding: 0;
+  position: relative;
 
   padding-top: 17px;
   padding-bottom: 13px;
+  padding-right: 60px;
+
   list-style: none;
   display: flex;
 
@@ -19,6 +22,7 @@
 
 .search {
   padding-top: 8px;
+  padding-left: 60px;
 }
 
 .user-items__search-field {
@@ -70,6 +74,8 @@
   }
 
   &--disabled {
+    width: 0;
+    height: 0;
     display: none;
   }
 }
