--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,3 +15,4 @@
 @import "blocks/about-us.scss";
 @import "blocks/contacts.scss";
 @import "blocks/main-footer.scss";
+@import "blocks/popup.scss";
